--- a/limbo/affiliate/templates/mobile/realme/realme c15/realme-c15.html
+++ b/limbo/affiliate/templates/mobile/realme/realme c15/realme-c15.html
@@ -19,7 +19,7 @@
           <h4 class="content" style="font-weight: 400;">Realme released his new smartphone Realme C15 at price of 10,290-INR</h4>
           <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Realme C15 : 3/64GB for 10,290-INR Watch Full review.</h1>
         </div>
-        <iframe width="560" height="380" src="https://www.youtube.com/embed/hsOOXNA7mkY"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/hsOOXNA7mkY"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div class="info">
           <h4 class="content">About Realme C15</h4>
           <p class="content"><span>Realme</span> has launched a new smartphone on 28 july 2020 called Realme C15. <b>Realme C15 price in india</b> <span>10,290</span>-INR and Realme C15 is already released on oct 8, 2020. Now coming to its design part: Realme c15 will feature a Waterdrop notch as well as a squared allied quad-camera setup at its top right corner. It has a 6.52(inch) IPS LCD touchscreen display with Gorilla Glass 3 protection. The Realme is 9.8mm thick and has a weight of 209g, which is suitable for single-handed use. </p>
