--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 8pro/OnePlus_8_Pro.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 8pro/OnePlus_8_Pro.html
@@ -120,7 +120,7 @@
     <!-- 4 -->
     <div class="specs_table">
       <div class="specs">
-        <strong>PLATFROM</strong>
+        <strong>PLATFORM</strong>
       </div>
       <div class="specs_type">
         <div class="specs_info">
