--- a/limbo/affiliate/templates/mobile/realme/realme c15/realme-c15.html
+++ b/limbo/affiliate/templates/mobile/realme/realme c15/realme-c15.html
@@ -22,9 +22,9 @@
         <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/hsOOXNA7mkY"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div class="info">
           <h4 class="content">About Realme C15</h4>
-          <p class="content"><span>Realme</span> has launched a new smartphone on 28 july 2020 called Realme C15. <b>Realme C15 price in india</b> <span>10,290</span>-INR and Realme C15 is already released on oct 8, 2020. Now coming to its design part: Realme c15 will feature a Waterdrop notch as well as a squared allied quad-camera setup at its top right corner. It has a 6.52(inch) IPS LCD touchscreen display with Gorilla Glass 3 protection. The Realme is 9.8mm thick and has a weight of 209g, which is suitable for single-handed use. </p>
-          <p class="content">Talking about the camera, Realme C15 comes with a quad camera setup that includes a 13 MP wide camera, 8 MP ultra-wide angle lens, 2 MP depth shooter, and a 2 MP macro lens. On the front, the phone will feature a single waterdrop notch camera that will consists of 8 MP wide angle camera.</p>
-          <p class="content">This smartphone comes with a single variant  i.e. 3/64GB RAM, with colour options like Marine Blue, Seagull Silver. The smart -phone is powered by  <span>MediaTek Helio G35 (12 nm)</span> and Non-removable Li-Po <b>6000-mAh</b> battery. It has support for fast charging 18W. </p>
+          <p class="content"><span>Realme</span> has launched a new smartphone on 28 July 2020 called Realme C15. <b>Realme C15 price in India</b> 10,290-INR and Realme C15 is already released on Oct 8, 2020. Now coming to its design part: Realme c15 will feature a Waterdrop notch as well as a squared allied quad-camera setup at its top-right corner. It has a 6.52(inch) IPS LCD touchscreen display with Gorilla Glass 3 protection. The Realme is 9.8mm thick and has a weight of 209g, which is suitable for single-handed use.</p>
+          <p class="content">Talking about the camera, Realme C15 comes with a quad-camera setup that includes a 13 MP wide camera, 8 MP ultra-wide-angle lens, 2 MP depth shooter, and a 2 MP macro lens. On the front, the phone will feature a single waterdrop notch camera that will consist of an 8 MP wide-angle camera.</p>
+          <p class="content">This smartphone comes with a single variant i.e. 3/64GB RAM, with color options like Marine Blue, Seagull Silver. The smartphone is powered by <span>MediaTek Helio G35 (12 nm)</span> and a Non-removable Li-Po 6000-mAh battery. It has support for fast charging 18W. </p>
           <div class="aff-link1">
             <form action="">
               <button class="btn btn-primary affilated-link_amazon" type="submit"> (coming soon) </button>
@@ -42,7 +42,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Realsed on</strong>
-          <p>30 july 2020</p>
+          <p>30 July 2020</p>
         </div>
         <div class="specs_info">
           <strong>Amazon</strong>
@@ -145,7 +145,7 @@
     <!-- 4 -->
     <div class="specs_table">
       <div class="specs">
-        <strong>PLATFROM</strong>
+        <strong>PLATFORM</strong>
       </div>
       <div class="specs_type">
         <div class="specs_info">
@@ -246,7 +246,7 @@
         </div>
         <div class="specs_info1">
           <strong>USB</strong>
-          <p>microUSB 2.0, USB On-The-Go</p>
+          <p>micro-USB 2.0, USB On-The-Go</p>
         </div>
       </div>
     </div>
