--- a/limbo/affiliate/templates/mobile/oneplus/oneplus_nord/oneplus nord.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus_nord/oneplus nord.html
@@ -149,7 +149,7 @@
     <!-- 4 -->
     <div class="specs_table">
       <div class="specs">
-        <strong>PLATFROM</strong>
+        <strong>PLATFORM</strong>
       </div>
       <div class="specs_type">
         <div class="specs_info">
