--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -16,7 +16,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="{% static 'image/banner/Nord.png' %}" class="d-block w-100" alt="">
+            <img src="{% static 'image/banner/oneplus-nord-b.jpg' %}" class="d-block w-100" alt="">
           </div>
           <div class="carousel-item">
             <img src="{% static 'image/banner/samsung-M31-b-2.png' %}" class="d-block w-100" alt="...">
