--- a/limbo/affiliate/templates/mobile/mi/poco f2/poco-f2.html
+++ b/limbo/affiliate/templates/mobile/mi/poco f2/poco-f2.html
@@ -1,6 +1,6 @@
 {% extends 'page/bas.html' %}
 {% block desc%}<meta name="description" content="Xiaomi Poco f2 price in India may be Rs 26900 and its release date may be 30 august 2020 (unofficial). This smartphone comes with 2 variants like 6/128GB, 8/128GB with color options like Moonlight White, Sky Blue, Space Grey, and Starry Purple. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="Xiaomi poco f2 specification, Xiaomi poco f2 release date, poco f2 price, Xiaomi poco f2 price in india"> {% endblock key%}
+{% block key%}<meta name="keywords" content="Xiaomi poco f2 feature, poco f2 specification, Xiaomi poco f2 release date, poco f2 price, Xiaomi poco f2 price in india"> {% endblock key%}
 {% block style %}
 <style>
   .iframe{
@@ -25,6 +25,7 @@
           <p class="content">After Poco F1, now Xiaomi is bringing a new phone called Poco F2 and it is going to be a very reference phone. Xiaomi Poco f2 smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an octa-core processor and it runs on Qualcomm Snapdragon 865 chipset. with this awesome processor, games run on the higher graphic setting which gives you a wonderful gaming experience. </p>
           <p class="content"> poco f2 measures 163.3 mm x 75.4 mm x 8.9 mm and weighs 218 grams and it has a Super AMOLED display. The screen has a resolution of 1080 x 2400 pixels and 395 PPI pixel density. Talking about its camera, On the front camera, you get a 20-megapixel primary camera and on the rear camera, there is a 64 megapixel wide-angle, 13 megapixels ultra-wide, 8-megapixel depth and 2 megapixels micro. camera with features like 30 x Digital Zoom, Face detection, Auto Flash, Touch to focus. It has support for 33W fast charging and has a non-removable 4100 mAh battery. </p>
           <p class="content">Xiaomi Poco f2 price in India may be Rs 26900 and its release date may be 30 august 2020 (unofficial). This smartphone comes with 2 variants like 6/128GB, 8/128GB with color options like Moonlight White, Sky Blue, Space Grey, and Starry Purple. </p>
+          <h5 style="font-weight: 400;">Xiaomi Poco f2 Key features:</h5>
           <ul class="content">
             <li>Diaplay: 6.67 inches</li>
             <li>Processor: Qualcomm Snapdragon 865</li>
