--- a/limbo/affiliate/templates/mobile/mi/poco f2/poco-f2.html
+++ b/limbo/affiliate/templates/mobile/mi/poco f2/poco-f2.html
@@ -260,10 +260,8 @@
           <strong>Sensors</strong>
             <p>Fingerprint (On-screen), 	Light sensor, Proximity sensor, Accelerometer, Compass,</p>
         </div>
-      </div>
-      <div class="specs_type">
         <div class="specs_info1">
-          <strong>Sensors</strong>
+          <strong></strong>
             <p>Gyroscope</p>
         </div>
       </div>
