--- a/limbo/affiliate/templates/mobile/mi/poco f2/poco-f2.html
+++ b/limbo/affiliate/templates/mobile/mi/poco f2/poco-f2.html
@@ -258,11 +258,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Sensors</strong>
-            <p>Fingerprint (On-screen), 	Light sensor, Proximity sensor, Accelerometer, Compass,</p>
+            <p>Fingerprint (On-screen), Light sensor, Proximity sensor, Accelerometer,</p>
         </div>
         <div class="specs_info1">
           <strong></strong>
-            <p>Gyroscope</p>
+            <p> Compass, Gyroscope</p>
         </div>
       </div>
     </div>
