--- a/limbo/affiliate/templates/mobile/realme/realme c11/realme c11.html
+++ b/limbo/affiliate/templates/mobile/realme/realme c11/realme c11.html
@@ -24,11 +24,11 @@ Can we play free fire in realme c11"> {% endblock key%}
           <p>The Realme C11 runs on Android 10, realme UI 1.0.The Realme C11 measures 164.4 x 75.9 x 9.1 mm (6.47 x 2.99 x 0.36 in) (height x width x thickness) and weighs 196 g (6.91 oz) . It was launched in Mint Green, Pepper Grey .Connectivity options on the Realme C11 include Wi-Fi 802.11 b/g/n, hotspot, GPS, Bluetooth v5.00, NFC, Micro USB 2.0 , 3G, and 4G. At the range of 7000-INR <span>realme C11</span> is best. if you are fan of <b>free fire</b> it's not best phone but free fire run smoothly at this specification. </p>
           <p></p>
           <div class="aff-link1">
-            <form action="https://www.flipkart.com/realme-c11-rich-green-32-gb/p/itm831d19fd9cdc4">
-              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            <form action="https://amzn.to/2Pcks0E">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
             </form>
-            <form action="https://www.flipkart.com/realme-c11-rich-green-32-gb/p/itm831d19fd9cdc4">
-              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            <form action="https://amzn.to/2Pcks0E">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price</button>
             </form>
           </div>
           <p></p>
