--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -563,6 +563,23 @@
     <section>
       <div class="blogs">
         <div class="blog-posts ">
+         <!-- 2 -->
+         <article class="blog-post shadow">
+           <div class="post">
+             <div class="">
+               <img class="img-article"  src="{% static 'image/article/apps/filmorago/filmorago.jpg'%}" alt="">
+             </div>
+             <div class="post-info">
+               <h3  style="font-weight: 400;">FilmoraGo - Best video editing app in 2020</h3>
+               <p style="color:gray;">Are you searching for the upcoming mobile phones in 2020, so here is the list of new mobile phone coming soon in India. With lots of rumors and leaks about the upcoming mobile phones, we have listed the phones which were coming soon in India. </p>
+               <p></p><br>
+               <div class="badge">
+                 <a class="read-more" href="{% url 'upcomingMobile' %}">Read more</a>
+                 <a class="Categories" style="color: gray" href="#"><b>Categories</b> : Technology</a>
+               </div>
+             </div>
+           </div>
+         </article>
          <!--1-->
           <article class="blog-post shadow">
             <div class="post">
@@ -570,7 +587,7 @@
                 <img class="img-article"  src="{% static 'image/mobile/oneplus/oneplus-nord-2.jpg' %}" alt="">
               </div>
               <div class="post-info">
-                <h3 style="color:gray;">10 Upcoming mobile phones in 2020</h3>
+                <h3  style="font-weight: 400;">10 Upcoming mobile phones in 2020</h3>
                 <p style="color:gray;">Are you searching for the upcoming mobile phones in 2020, so here is the list of new mobile phone coming soon in India. With lots of rumors and leaks about the upcoming mobile phones, we have listed the phones which were coming soon in India. </p>
                 <p></p><br>
                 <div class="badge">
@@ -587,7 +604,7 @@
                 <img class="img-article" src="{% static 'image/mobile/oneplus/oneplus-7t-2.jpg' %}" alt="">
               </div>
               <div class="post-info">
-                <h3 style="color:gray;">Best top ten Mobiles Gathered for you</h3>
+                <h3 style="font-weight: 400;">Best top ten Mobiles Gathered for you</h3>
                 <p style="color:gray;">A flagship phone is the latest and greatest from a brand. It's the last phone they released and it's often the phone that costs the most. Many brands and manufacturers release new and improved smartphone models every year, replacing last year's flagship phone..</p>
                 <div class="badge">
                   <a class="read-more" href="{% url 'toptenmob'%}">Read more</a>
@@ -603,7 +620,7 @@
                 <img class="img-article"  src="{% static 'image/mobile/battery/samsung-galaxy-m21.jpg'%}" alt="">
               </div>
               <div class="post-info">
-                <h3 style="color:gray;">Top 10 best battery backup mobile</h3>
+                <h3 style="font-weight: 400;">Top 10 best battery backup mobile</h3>
                 <p style="color:gray;">Hello guys , Looking for for long lasting battery backup phones..? Here we arranged some of thr best battery backup phone for you guys.</p>
                 <p></p><br>
                 <div class="badge">
@@ -620,7 +637,7 @@
                 <img class="img-article"   src="{% static 'image/article/programing/backend-frontend.png'%}" alt="">
               </div>
               <div class="post-info">
-                <h3 style="color:gray;">Top 10 backend Framework for web development</h3>
+                <h3 style="font-weight: 400;">Top 10 backend Framework for web development</h3>
                 <p style="color:gray;">If you have any knowledege about web development you also heard about <b>backend</b>. <b>What is backend</b>? . It is the term used for the behind-the-scenes activities that happen when performing any action on a website.</p>
                 <div class="badge">
                   <a class="read-more" href="{% url 'toptenframework' %}">Read more</a>
@@ -636,7 +653,7 @@
                 <img class="img-article"   src="{% static 'image/article/programing/venv.png'%}" alt="">
               </div>
               <div class="post-info">
-                <h3 style="color:gray;">How to create python virtual Environment</h3>
+                <h3 style="font-weight: 400;">How to create python virtual Environment</h3>
                 <p style="color:gray;">Now a day python become most popular high level language. Python was created by Guido Van Rossum and released in 1991. In this entire article i will teach you <b>how to create python virtual Environment ?</b>...</p>
                 <div class="badge">
                   <a class="read-more" href="{% url 'pythonVenv' %}">Read more</a>
