--- a/limbo/affiliate/templates/blog/apps/filmorago/filmorago.html
+++ b/limbo/affiliate/templates/blog/apps/filmorago/filmorago.html
@@ -23,7 +23,7 @@
       }
       @media (max-width: 768px){
         .image1{
-          margin-left: 0;
+          margin-left: 30px;
         }
       }
     </style>
