--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -571,7 +571,7 @@
              </div>
              <div class="post-info">
                <h3  style="font-weight: 400;">FilmoraGo - Best video editing app in 2020</h3>
-               <p style="color:gray;">Are you searching for the upcoming mobile phones in 2020, so here is the list of new mobile phone coming soon in India. With lots of rumors and leaks about the upcoming mobile phones, we have listed the phones which were coming soon in India. </p>
+               <p style="color:gray;">It is very easy to use. flimorago is the best video editing app in 2020 with advanced features. If you are creative then this app is best to start with editing.</p>
                <p></p><br>
                <div class="badge">
                  <a class="read-more" href="{% url 'upcomingMobile' %}">Read more</a>
