--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -571,7 +571,7 @@
              </div>
              <div class="post-info">
                <h3  style="font-weight: 400;">FilmoraGo - Best video editing app in 2020</h3>
-               <p style="color:gray;">It is very easy to use. flimorago is the best video editing app in 2020 with advanced features. If you are creative then this app is best to start with editing.</p>
+               <p style="color:gray;">It is very easy to use. flimorago is the best video editing app in 2020 with advanced features. If you are creative then this app is best to start with editing. It has more than 50 million downloads and nearly 417k user reviews according to the google play store.</p>
                <p></p><br>
                <div class="badge">
                  <a class="read-more" href="{% url 'upcomingMobile' %}">Read more</a>
