--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -575,7 +575,7 @@
                <p></p><br>
                <div class="badge">
                  <a class="read-more" href="{% url 'upcomingMobile' %}">Read more</a>
-                 <a class="Categories" style="color: gray" href="#"><b>Categories</b> : Technology</a>
+                 <a class="Categories" style="color: gray" href="#"><b>Categories</b> : app</a>
                </div>
              </div>
            </div>
