--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -574,7 +574,7 @@
                <p style="color:gray;">It is very easy to use. flimorago is the best video editing app in 2020 with advanced features. It has more than 50 million downloads and nearly 417k user reviews according to the google play store.</p>
                <p></p><br>
                <div class="badge">
-                 <a class="read-more" href="{% url 'upcomingMobile' %}">Read more</a>
+                 <a class="read-more" href="{% url 'filmorago' %}">Read more</a>
                  <a class="Categories" style="color: gray" href="#"><b>Categories</b> : app</a>
                </div>
              </div>
