--- a/limbo/affiliate/templates/blog/apps/filmorago/filmorago.html
+++ b/limbo/affiliate/templates/blog/apps/filmorago/filmorago.html
@@ -47,7 +47,7 @@
           <p class="content"><b>Price</b>: Free-to-use / 400-INR <br><b>Download size</b>: 96 MB</p>
           <p class="content">It is very easy to use. flimorago is the <b>best video editing app in 2020</b> with advanced features. If you are creative then this app is best to start with editing. Edit videos with music, make your moments, share with your friends, time-saving app, the menu is handy. This app comes with a pro version which is paid to use. If you want to go pro, AppStore is there with you.</p>
           <div class="aff-link1">
-            <form action="https://www.flipkart.com/motorola-g8-power-lite-arctic-blue-64-gb/p/itm9d7b62a81c100?pid=MOBFZ5EXDKHFV832&lid=LSTMOBFZ5EXDKHFV832SY9PU2&marketplace=FLIPKART&srno=s_1_1&otracker=AS_QueryStore_OrganicAutoSuggest_2_4_na_na_na&otracker1=AS_QueryStore_OrganicAutoSuggest_2_4_na_na_na&fm=SEARCH&iid=4f1ec90b-b08b-45ae-b94b-dc9c80e3038c.MOBFZ5EXDKHFV832.SEARCH&ppt=sp&ppn=sp&ssid=9xevxowr740000001594824843895&qH=c7b38449af1e8e16">
+            <form action="https://filmorago-free-video-editor.en.softonic.com/android">
               <button class="btn btn-success affilated-link_amazon" type="submit">Download form here</button>
             </form>
           </div>
