--- a/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
+++ b/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
@@ -148,9 +148,26 @@
           </ul>
           <hr class="my-2">
         </div>
-            <!-- 6 -->
+        <!-- 6 -->
         <div class="info">
-          <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">6. Poco C3</h2>
+          <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">6. Asus Zenfone 7 pro</h2>
+          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/CbW7HdH-Ytg" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <hr class="my-2">
+          <p><b>Expected price</b> :  Rs 39,990 <br><b>Release date</b> :  October 13, 2020 (Unofficial). </p>
+          <h4 class="content">Asus Zenfone 7 pro: Key specifications </h4>
+          <ul class="content">
+            <li>Diaplay: 6.5-inches (1080x2400 pixels)</li>
+            <li>Rear Camera : 64 MP + 12 MP + 5 MP </li>
+            <li>Front Camera : 20MP</li>
+            <li>Storage/RAM : 128GB/12GB</li>
+            <li>Processor: 	Qualcomm Snapdragon 865 Plus </li>
+            <li>battery : 5100 mAh battery </li>
+          </ul>
+          <hr class="my-2">
+        </div>
+        <!-- 7 -->
+        <div class="info">
+          <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">7. Poco C3</h2>
           <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/NSDktWO0woY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <hr class="my-2">
           <p><b>Expected price</b> : 8,499-INR <br><b>Release date</b> : Not announced yet. </p>
@@ -169,7 +186,7 @@
 
         <!-- 7 -->
          <div class="info">
-          <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">7. Xiaomi A4 </h2>
+          <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">8. Xiaomi A4 </h2>
           <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/Z6a7OhC9W_M" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <hr class="my-2">
           <p><b>Expected price</b> : 13,999-INR <br><b>Release date</b> : 20 Aug, 2020 (Unofficial) </p>
@@ -186,13 +203,13 @@
         </div>
         <!-- 8 -->
          <div class="info">
-          <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">8. Realme C15 </h2>
+          <h2  style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">9. Realme C15 </h2>
           <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/a3Cci-84PLY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <hr class="my-2">
          <p><b>Expected price</b> : 12,999-INR <br><b>Release date</b> : 31 july, 2020 </p>
           <h4 class="content">Realme C15: Key specifications </h4>
           <ul class="content">
-            <li>Display : 6.5"(720*1600)</li>
+            <li>Display : 6.5-inches (720*1600)</li>
             <li>Rear Camera : 13MP + 8MP + 2MP + 2MP </li>
             <li>Front Camera : 8MP</li>
             <li>Storage/RAM : 64GB/3GB</li>
@@ -202,16 +219,33 @@
           <hr class="my-2">
         </div>
         <!-- 9 -->
+        <div class="info">
+         <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">10. Redmi 9 prime</h2>
+         <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/0ZB0YSgYz34" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <hr class="my-2">
+         <p><b>Expected price</b> : 9,999-INR <br><b>Release date</b> : 4th August 2020 (expected). </p>
+         <p class="content"></p>
+         <h4 class="content">Redmi 9 prime: Key specifications </h4>
+         <ul class="content">
+           <li>Display : 	6.53-inches (1080x2340 pixels)</li>
+           <li>Processor : Mediatek Hileo G80 </li>
+           <li>Rear Camera : 13-megapixel + 8-megapixel + 5-megapixel  + 2-megapixel </li>
+           <li>Front Camera : 8 megapixel</li>
+           <li>Storage/RAM : 32GB 3GB RAM</li>
+           <li>Battery : 	5020 mAh battery</li>
+         </ul>
+         <hr class="my-2">
+       </div>
         <!-- 10 -->
          <div class="info">
-          <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">9. Realme X3 Pro</h2>
+          <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">11. Realme X3 Pro</h2>
           <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/pWqqDmmD3Ww" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <hr class="my-2">
           <p><b>Expected price</b> : 31,999-INR <br><b>Release date</b> : Not announced yet. </p>
           <p class="content"></p>
           <h4 class="content">Realme X3 Pro: Key specifications </h4>
           <ul class="content">
-            <li>Display : 6.57"(1080*2400)</li>
+            <li>Display : 6.57-inches (1080*2400)</li>
             <li>Rear Camera : 64MP + 3MP + 8MP + 2MP </li>
             <li>Front Camera : 16MP + 8MP</li>
             <li>Storage/RAM : 64GB 6GB RAM</li>
@@ -222,14 +256,14 @@
         </div>
         <!-- 11 -->
          <div class="info">
-          <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">10. Redmi 9A</h2>
+          <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">12. Redmi 9A</h2>
           <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/QM0tfag9E58" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <hr class="my-2">
           <p><b>Expected price</b> : 6,999-INR <br><b>Release date</b> : 4 august, 2020 </p>
           <p class="content"></p>
           <h4 class="content">Redmi 9A: Key specifications </h4>
           <ul class="content">
-            <li>Display : 6.53"(720*1600)</li>
+            <li>Display : 6.53-inches (720*1600)</li>
             <li>Rear Camera : 13MP </li>
             <li>Front Camera : 5MP</li>
             <li>Storage/RAM : 32GB/2GB RAM</li>
@@ -238,9 +272,27 @@
           </ul>
           <hr class="my-2">
           </div>
-            <p class="content">You may have benefited from the above list of <b>upcoming phones 2020</b>. From now on, we will keep you informed about such <b>new mobile phones 2020</b>. If are looking for <b>best gaming phones under 20000</b> <a href="{% url 'pubg' %}">Click here</a>. </p>
-            <h4 style="font-weight: 400;">Thankyou :)</h4>
-            <br>
+          <!-- 13 -->
+          <div class="info">
+           <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">13. Motorola G 5G Plus</h2>
+          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/SHh_H2FOr9Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           <hr class="my-2">
+           <p><b>Expected price</b> : Not announced yet. <br><b>Release date</b> : 4 august, 2020 </p>
+           <p class="content"></p>
+           <h4 class="content">:  Motorola G 5G Plus: Key specifications </h4>
+           <ul class="content">
+             <li>Display : 6.7-inch (1080 x 2520)</li>
+             <li>Processor : Qualcomm Snapdragon 765</li>
+             <li>Rear Camera : 48MP + 12MP + 8MP + 5MP </li>
+             <li>Front Camera : 16MP</li>
+             <li>Storage/RAM : 64GB/4GB RAM</li>
+             <li>Battery : 5000 mAh battery</li>
+           </ul>
+           <hr class="my-2">
+         </div>
+           <p class="content">You may have benefited from the above list of <b>upcoming phones 2020</b>. From now on, we will keep you informed about such <b>new mobile phones 2020</b>. If are looking for <b>best gaming phones under 20000</b> <a href="{% url 'pubg' %}">Click here</a>. </p>
+           <h4 style="font-weight: 400;">Thankyou :)</h4>
+           <br>
           </div>
         </div>
 {% endblock content%}
