--- a/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
+++ b/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
@@ -275,7 +275,7 @@
           <!-- 13 -->
           <div class="info">
            <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">13. Motorola G 5G Plus</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/SHh_H2FOr9Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/SHh_H2FOr9Q"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            <hr class="my-2">
            <p><b>Expected price</b> : Not announced yet. <br><b>Release date</b> : 4 august, 2020 </p>
            <p class="content"></p>
