--- a/limbo/affiliate/templates/blog/battery/battery.html
+++ b/limbo/affiliate/templates/blog/battery/battery.html
@@ -51,10 +51,10 @@
             <li>Fast charging 15W</li>
           </ul>
             <div class="aff-link1">
-              <form action="https://www.amazon.in/Samsung-Galaxy-Space-Black-Storage/dp/B07HGN617M/ref=sr_1_1_sspa?dchild=1&keywords=samsung+m31&qid=1594896934&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEzNFBDNjIySVhTSTFXJmVuY3J5cHRlZElkPUEwNTM3NDEyMUkxTUdBSFFSREY0SyZlbmNyeXB0ZWRBZElkPUEwMjg5MTE4MkVWSzZQSFcxNVhMViZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=">
+              <form action="https://amzn.to/2DrlGCA">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
               </form>
-              <form action="https://www.amazon.in/Samsung-Galaxy-Space-Black-Storage/dp/B07HGN617M/ref=sr_1_1_sspa?dchild=1&keywords=samsung+m31&qid=1594896934&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEzNFBDNjIySVhTSTFXJmVuY3J5cHRlZElkPUEwNTM3NDEyMUkxTUdBSFFSREY0SyZlbmNyeXB0ZWRBZElkPUEwMjg5MTE4MkVWSzZQSFcxNVhMViZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=">
+              <form action="https://amzn.to/2DrlGCA">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
