--- a/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
+++ b/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
@@ -19,7 +19,7 @@
 </style>
 {% endblock style %}
   {% load static %}
-    {% block title%}10 Upcoming mobile phone in 2020 (august) - hipein.com{% endblock title%}
+    {% block title%}13 Upcoming mobile phone in 2020 (august) - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
 
@@ -40,11 +40,15 @@
             <li>Samsung Galaxy Note 20</li>
             <li>Samsung Galaxy Note 20 Ultra</li>
             <li>Asus Zenfone 7</li>
+            <li>Asus Zenfone 7 Pro</li>
             <li>Poco C3</li>
             <li>Xiaomi A4</li>
             <li>Realme C15</li>
+            <li>Redmi 9 Prime</li>
             <li>Realme X3 Pro</li>
             <li>Redmi 9A</li>
+            <li>Motorola G 5G Plus</li>
+            <li></li>
           </ul>
         </div>
         <p></p>
@@ -54,6 +58,7 @@
             <li>Poco C3 - 8,499-INR</li>
             <li>Xiaomi A4 - 13,999-INR</li>
             <li>Realme C15 - 12,999-INR</li>
+            <li>Redmi 9 Prime - 9,999-INR</li>
             <li>Redmi 9A - 6,999-INR</li>
           </ul>
         </div>
