--- a/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
+++ b/limbo/affiliate/templates/blog/technology/upcoming-mobile.html
@@ -84,7 +84,10 @@
         <!-- 2 -->
         <div class="info">
           <h2 style="padding-left:3px; border-left: 2px solid red; font-weight: 400;">2. Samsung Galaxy M31s</h2>
-          <iframe class="iframe" width="560" height="380" src="https://www.youtube.com/embed/R_NW4j-Rg7w" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div>
+            <img class="image" src="{% static 'image/article/mobile/upcoming mobile/samsung-galaxy-m31s.jpg'%}" alt="">
+          </div>
+          <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by: All World Tony Stark</p>
           <hr class="my-2">
           <p><b>Expected price</b> : 16,999-INR <br><b>Release date</b> : 30 july, 2020 </p>
           <p></p>
